@@ -8,7 +8,6 @@ Video rotation: 90°/270°
 Better radio stations
 YouTube playlists
 Accurate seeking
-A-B repeat
 
 Filters:
 	Video filters - YADIF
