@@ -1415,6 +1415,22 @@ amp</source>
         <source>Set playback speed (sec.)</source>
         <translation>Régler la vitesse de lecture (sec.)</translation>
     </message>
+    <message>
+        <source>A-B Repeat</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>disabled</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>from</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>to</source>
+        <translation type="unfinished"></translation>
+    </message>
 </context>
 <context>
     <name>Playback</name>
@@ -1559,6 +1575,10 @@ amp</source>
     </message>
     <message>
         <source>Suspend after playbac&amp;k is finished</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>A&amp;-B Repeat</source>
         <translation type="unfinished"></translation>
     </message>
 </context>
